refactor: 코드 리팩토링 (예: 불필요한 코드 정리)